--- a/vue3-sfc/index.html
+++ b/vue3-sfc/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="node_modules/@picocss/pico/css/pico.classless.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body id="app"></body>
-  <script type="module" src="/src/main.ts"></script>  
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
